<resources>
    <string name="app_name">RMA - Quiz App</string>
    <string name="QuizIcon">Quiz Icon</string>
    <string name="AddIcon">Add Icon</string>
    <string name="kvizButton">Dodaj/Izmijeni kviz</string>
    <string name="pitanjaLabel">Pitanja u kvizu</string>
    <string name="pitanjaLabel2">Moguca pitanja</string>
    <string name="etNazivKviza">Naziv kviza - INPUT</string>
    <string name="labelOdgovori">Odgovori</string>
    <string name="btnDodajOdgovor">Dodaj</string>
    <string name="btnDodajTacan">Dodaj tacan</string>
    <string name="btnDodajPitanje">Spasi pitanje</string>
    <string name="saveCategory">Spasi kategoriju</string>
    <string name="addCategoryIcon">Dodaj ikonu</string>
    <string name="etNazivPitanja">Naziv pitanja - INPUT</string>
    <string name="etOdgovor">Odgovor</string>
    <string name="categoryError">Izaberite/Unesite kategoriju!</string>
    <string name="btnImportKviz">Importuj kviz</string>

    <string name="labelNazivKviza">Naziv kviza:</string>
    <string name="labelBrojTacnih">Broj tačnih:</string>
    <string name="labelBrojPreostalih">Broj preostalih:</string>
    <string name="labelProcenatTacnih">Procenat tačnih:</string>
    <string name="btnKraj">Završi kviz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listaKategorijaFrag">Lista kategorija:</string>
    <string name="zavrsi_kviz">Završi kviz</string>
    <string name="vrijeme">Vrijeme:</string>
</resources>
